# mpv

./: a.py  meson.build  meson_options.txt
DOCS/man/: input.rst
TOOLS/: lua2string.c  lua2string.lua  lua2string.py
TOOLS/lua/: playlist-test.lua
options/: options.c  options.h
player/: command.c  command.h  loadfile.c  lua.c
player/lua/: defaults.lua  meson.build
