lua_files = ['defaults.lua', 'assdraw.lua', 'options.lua', 'osc.lua',
             'ytdl_hook.lua', 'stats.lua', 'console.lua', 'auto_profiles.lua',
             'input.lua', 'fzy.lua', 'select.lua']

sources += lua2string_gen.process(
    lua_files,
    preserve_path_from: meson.global_source_root(),
)
